--- a/website/highlights/2020-02-17-loki-sink.md
+++ b/website/highlights/2020-02-17-loki-sink.md
@@ -1,9 +1,40 @@
 ---
 last_modified_on: "2020-03-31"
-title: "The Vector Source Now Accepts Metrics"
-description: "Until now, the Vector source only accepted logs, now it accepts metrics as well"
-author_github: https://github.com/a-rodin
+$schema: "/.meta/.schemas/highlights.json"
+title: "New Loki Sink"
+author_github: https://github.com/binarylogic
 pr_numbers: [1783]
 release: "0.8.0"
-tags: ["type: new feature", "domain: sources", "source: vector"]
+tags: ["type: new feature", "domain: sinks", "sink: loki"]
 ---
+
+[Loki][urls.loki] has been one of our most requested sinks and Vector now has
+support for it via the [`loki` sink][docs.sinks.loki]. Vector is an amazing
+fit for this sink because Vector allows you to [derive metrics from
+logs][docs.transforms.log_to_metric], making it easy to align labels and
+correlate logs and metrics.
+
+```toml title="vector.toml"
+[sources.logs]
+  type = "file"
+  include = ["/var/logs/*"]
+
+[transforms.metrics]
+  type = "log_to_metric"
+  input = ["logs"]
+
+  [[transforms.correlate.metrics]]
+      type = "histogram"
+      field = "time"
+      name = "time_ms" # optional
+      tags.status = "{{status}}" # optional
+      tags.host = "{{host}}" # optional
+
+[sinks.prometheus]
+  type = "prometheus"
+  inputs = ["metrics"]
+
+[sinks.loki]
+  type = "prometheus"
+  inputs = ["logs"]
+```
